cmake_minimum_required(VERSION 4.0)
project(AdventOfCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdventOfCode main.cpp
        2025/2025.cpp
        2025/2025.h
        time.h
        2025/day.h
        2025/1/solution.cpp
        2025/1/solution.h
        2025/2/solution.cpp
        2025/2/solution.h
        2025/3/solution.cpp
        2025/3/solution.h
        2025/4/solution.cpp
        2025/4/solution.h
        2025/5/solution.cpp
        2025/5/solution.h
        2025/6/solution.cpp
        2025/6/solution.h
        2025/7/solution.cpp
        2025/7/solution.h
        2025/8/solution.cpp
        2025/8/solution.h
        2025/9/solution.cpp
        2025/9/solution.h)
